# crazy_cpm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
src/: ccmp.h  ccpm.c  ccpm.h  ccpmpy.pyx
src/ccpm/: __init__.py  _ccpm.pyx  net.py  net_model.py
src/crazy_cpm/: __init__.py  _ccpm.pyx  net.py  net_model.py
tests/: README.md  benchmark.py  benchmark2.py  build_model.py  build_model_2.py  make_aoa_proto.py  net_model_proto.py  sqla_prototype.ipynb  sqla_prototype3.ipynb  sqla_prototype_2.ipynb  test_cython.py  test_cython2.py  test_cython3.py  test_cython4.py  test_net_model.py  test_net_model2.py
tests/ctest/: ctest.cbp  main.c
tests/data/input/: project_template.xlsx
tests/data/output/: net.html  project_template.xlsx
