[metadata]
name = crazy_cpm
version = 0.10.0
platforms = any

description = Crazy Critical Path Method
long_description = file: README.md
long_description_content_type = text/markdown

license = Apache License, Version 2.0
license_file = file: LICENSE

author = anonimous
author_email = shkolnick-kun@gmail.com

url = https://github.com/shkolnick-kun/crazy_cpm
download_urls = https://github.com/shkolnick-kun/crazy_cpm
project_urls =
	Documentation = https://github.com/shkolnick-kun/crazy_cpm
	Code = https://github.com/shkolnick-kun/crazy_cpm
	Issue tracker = https://github.com/shkolnick-kun/crazy_cpm/issues

classifiers =
	evelopment Status :: 3 - Alpha
	OSI Approved :: GNU General Public License v3 (GPLv3
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4

package_dir=
    =src
packages=find:

[options.packages.find]
where=src


